--- a/src/globals.scss
+++ b/src/globals.scss
@@ -1,3 +1,12 @@
 @tailwind components;
 @tailwind utilities;
 @tailwind base;
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100dvh;
+  width: 100vw;
+  background: #202020;
+  position: relative;
+}
